Debugged layout .xml files and dependencies